design css spacing issues resolved.

--- a/css/custom.css
+++ b/css/custom.css
@@ -849,7 +849,7 @@ footer form .btn.btn-green{
     left: -3.75rem;
     display: inline-flex;
 }
-.DivinfluencersLocation{padding-bottom:11.73rem}
+.DivinfluencersLocation{padding-bottom:3.50rem}
 .Bckground-box img {
     width: 100%;
     max-width: 100%;
